BNWA-15: update names

--- a/src/styles/breakpoints/index.scss
+++ b/src/styles/breakpoints/index.scss
@@ -1,33 +1,1 @@
-$mobile-m: 375px;
-$mobile-l: 420px;
-$tablet-height: 640px;
-$tablet-m: 576px;
-$tablet-mini: 700px;
-$tablet: 768px;
-$tablet-l: 850px;
-$desktop-s: 992px;
-$desktop: 1024px;
-$desktop-l: 1100px;
-$wide: 1245px;
-$wide-s: 1200px;
-$wide-m: 1350px;
-$wide-l: 1400px;
-$wide-xl: 1440px;
-$large: 1920px;
-
-$breakpoints: (
-  mobile-m: $mobile-m,
-  mobile-l: $mobile-l,
-  tablet-m: $tablet-m,
-  tablet: $tablet,
-  tablet-l: $tablet-l,
-  desktop-s: $desktop-s,
-  desktop: $desktop,
-  desktop-l: $desktop-l,
-  wide-s: $wide-s,
-  wide: $wide,
-  wide-m: $wide-m,
-  wide-l: $wide-l,
-  wide-xl: $wide-xl,
-  large: $large,
-);
+@forward './breakpoints.scss';
