BNWA-17: Create UI for mobile and fix all bugs

--- a/src/styles/mixins/flex-shortcuts.scss
+++ b/src/styles/mixins/flex-shortcuts.scss
@@ -20,6 +20,12 @@
   justify-content: space-between;
 }
 
+@mixin flex_align_around {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
 @mixin flex_between {
   display: flex;
   justify-content: space-between;
