--- a/src/components/SideBar/SideBar.module.scss
+++ b/src/components/SideBar/SideBar.module.scss
@@ -1,82 +1,144 @@
 .sidebar {
   width: 100%;
   max-width: 270px;
+  box-shadow: -5px -30px 25px $color_gray_100;
+
+  @include breakpoint(tablet) {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 60px;
+    z-index: 99;
+    max-width: 100%;
+    box-shadow: 0 -5px 10px $color_gray_50;
+
+    .container {
+      @include flex_align_around;
+
+      padding: 0 16px;
+      height: 100%;
+
+      &__logo,
+      &__sectionTitle {
+        display: none;
+      }
+
+      &__nav {
+        display: flex;
+        gap: 16px;
+        width: 100%;
+        height: 100%;
+      }
+
+      &__link,
+      &__active {
+        @include flex_center;
+
+        flex: 1;
+        padding: 8px 0;
+        font-size: 12px;
+        border-radius: 12px;
+        flex-direction: column;
+      }
+
+      .icon {
+        margin: 0;
+        font-size: 20px;
+        transition: transform 0.2s ease;
+      }
+
+      &__sectionLinks {
+        @include flex_align;
+
+        flex: 1;
+        height: 100%;
+      }
+    }
+  }
 }
 .container {
   width: 100%;
+  height: 100vh;
   padding: 24px;
-}
 
-.logo {
-  margin-bottom: 32px;
-}
+  &__logo {
+    margin-bottom: 32px;
+  }
 
-.link {
-  font-family: 'Montserrat-Medium';
-  width: 100%;
-  display: flex;
-  cursor: pointer;
-  font-weight: 500;
-  padding: 17px 16px;
-  align-items: center;
-  border-radius: 12px;
-  text-decoration: none;
-  color: $color_gray_400;
-  transition: all 0.3s ease;
+  &__sectionTitleWrap {
+    margin-bottom: 16px;
+  }
 
-  &:hover {
-    background: $color_violet_linear_gradient;
+  &__sectionTitle {
+    @include text-wrap;
+
+    font-family: 'Montserrat-Bold';
+    font-size: 16px;
+    font-weight: 700;
+    color: $color_gray_800;
+  }
+
+  .icon {
+    display: flex;
+    font-size: 18px;
+    margin-right: 10px;
+    transition: transform 0.2s ease;
+  }
+
+  .title {
+    @include text-wrap;
+    transition: transform 0.2s ease;
+  }
+
+  &__active {
+    @include flex_align;
+
+    font-family: 'Montserrat-Medium';
+    margin: 1px 0;
+    cursor: pointer;
+    padding: 16px;
     color: $color_white;
+    border-radius: 12px;
+    text-decoration: none;
+    color: $color_gray_400;
+    transition: all 0.3s ease;
+    background: $color_violet_linear_gradient;
 
-    .icon {
-      transform: scale(1.1);
-      color: $color_white !important;
-    }
+    .icon,
     .title {
       color: $color_white;
     }
   }
-}
 
-.active {
-  font-family: 'Montserrat-Medium';
-  margin: 1px 0;
-  display: flex;
-  cursor: pointer;
-  padding: 17px 16px;
-  align-items: center;
-  color: $color_white;
-  border-radius: 12px;
-  text-decoration: none;
-  color: $color_gray_400;
-  transition: all 0.3s ease;
-  background: $color_violet_linear_gradient;
+  &__link {
+    @include flex_align;
 
-  .icon,
-  .title {
-    color: $color_white;
+    font-family: 'Montserrat-Medium';
+    width: 100%;
+    padding: 16px;
+    cursor: pointer;
+    font-weight: 500;
+    border-radius: 12px;
+    text-decoration: none;
+    color: $color_gray_400;
+    transition: all 0.3s ease;
+
+    &:hover {
+      color: $color_white;
+      background: $color_violet_linear_gradient;
+
+      .icon {
+        color: $color_white;
+        transform: scale(1.1);
+      }
+      .title {
+        color: $color_white;
+      }
+    }
   }
-}
 
-.icon {
-  display: flex;
-  font-size: 18px;
-  margin-right: 10px;
-  transition: transform 0.2s ease;
-}
-
-.title {
-  transition: transform 0.2s ease;
-}
-
-.sectionLinks {
-  height: 100%;
-}
-
-.sectionTitle {
-  font-size: 16px;
-  font-weight: 700;
-  margin-bottom: 17px;
-  color: $color_gray_800;
-  font-family: 'Montserrat-Bold';
+  &__sectionLinks {
+    height: 100%;
+  }
 }
