--- a/src/containers/Page1/Page1.module.scss
+++ b/src/containers/Page1/Page1.module.scss
@@ -2,7 +2,9 @@
   font-family: 'Montserrat-Medium';
   width: 100%;
   height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex_center;
+
+  &__title {
+    @include text-wrap;
+  }
 }
