--- a/src/styles/mixins/breakpoint.scss
+++ b/src/styles/mixins/breakpoint.scss
@@ -1,7 +1,8 @@
+@use 'sass:map';
 @use '../breakpoints/index.scss' as *;
 
 @mixin breakpoint($key, $type: max) {
-  $size: map-get($breakpoints, $key);
+  $size: map.get($breakpoints, $key);
 
   @if $size {
     @if $type == max {
