--- a/src/components/SideBar/SideBar.module.scss
+++ b/src/components/SideBar/SideBar.module.scss
@@ -86,20 +86,12 @@
     transition: transform 0.2s ease;
   }
 
-  .titleWrapper {
+  .title {
     @include text-wrap;
     text-align: center;
     transition: transform 0.2s ease;
 
-    overflow-x: auto;
-    -webkit-overflow-scrolling: touch;
-
-    &::-webkit-scrollbar {
-      display: none;
-    }
-
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+    @include scroll-hidden-x;
   }
 
   &__active {
