BNWA-17: fix scroll to linkContent

--- a/src/components/SideBar/SideBar.module.scss
+++ b/src/components/SideBar/SideBar.module.scss
@@ -8,16 +8,20 @@
     left: 0;
     right: 0;
     bottom: 0;
-    height: 60px;
     z-index: 99;
+    height: 60px;
     max-width: 100%;
     box-shadow: 0 -5px 10px $color_gray_50;
 
     .container {
       @include flex_align_around;
 
-      padding: 0 16px;
       height: 100%;
+      padding: 0 10px;
+
+      @include breakpoint(mobile-l) {
+        padding: 0 6px;
+      }
 
       &__logo,
       &__sectionTitle {
@@ -25,17 +29,25 @@
       }
 
       &__nav {
-        display: flex;
-        gap: 16px;
+        gap: 6px;
         width: 100%;
         height: 100%;
+        display: flex;
+        overflow-x: auto;
+        scroll-behavior: smooth;
+        -webkit-overflow-scrolling: touch;
+
+        &::-webkit-scrollbar {
+          display: none;
+        }
+        scrollbar-width: none;
+        -ms-overflow-style: none;
       }
 
       &__link,
       &__active {
         @include flex_center;
 
-        flex: 1;
         padding: 8px 0;
         font-size: 12px;
         border-radius: 12px;
@@ -79,6 +91,19 @@
     color: $color_gray_800;
   }
 
+  &__linkContent {
+    gap: 8px;
+    min-width: auto;
+    align-items: center;
+    display: inline-flex;
+
+    @include breakpoint(tablet) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+  }
+
   .icon {
     display: flex;
     font-size: 18px;
@@ -88,10 +113,15 @@
 
   .title {
     @include text-wrap;
-    text-align: center;
+
+    padding: 0 10px;
+    text-align: start;
     transition: transform 0.2s ease;
 
-    @include scroll-hidden-x;
+    @include breakpoint(tablet) {
+      text-align: center;
+      white-space: nowrap;
+    }
   }
 
   &__active {
@@ -99,8 +129,8 @@
 
     font-family: 'Montserrat-Medium';
     margin: 1px 0;
-    cursor: pointer;
     padding: 16px;
+    cursor: pointer;
     color: $color_white;
     border-radius: 12px;
     text-decoration: none;
@@ -127,6 +157,10 @@
     color: $color_gray_400;
     transition: all 0.3s ease;
 
+    @include breakpoint(tablet) {
+      min-width: max-content;
+    }
+
     &:hover {
       color: $color_white;
       background: $color_violet_linear_gradient;
@@ -143,5 +177,6 @@
 
   &__sectionLinks {
     height: 100%;
+    overflow-x: auto;
   }
 }
