--- a/src/components/SideBar/SideBar.module.scss
+++ b/src/components/SideBar/SideBar.module.scss
@@ -5,6 +5,24 @@
   max-width: 270px;
   box-shadow: -5px -30px 25px $color_gray_100;
 
+  @include breakpoint(tablet) {
+    @include flex_align_around;
+
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 99;
+    height: 60px;
+    max-width: 100%;
+    padding: 0 10px;
+    box-shadow: 0 -5px 10px $color_gray_50;
+  }
+
+  @include breakpoint(mobile-l) {
+    padding: 0 4px;
+  }
+
   &__linkContent {
     @include flex_align;
 
@@ -47,8 +65,24 @@
     color: $color_gray_400;
     transition: all 0.3s ease;
 
+    &--active {
+      margin: 1px 0;
+      color: $color_white;
+      background: $color_violet_linear_gradient;
+
+      .sidebar__linkContent__icon,
+      .sidebar__linkContent__title {
+        color: $color_white;
+      }
+    }
+
     @include breakpoint(tablet) {
+      @include flex_center;
+
       padding: 0;
+      font-size: 12px;
+      border-radius: 12px;
+      flex-direction: column;
       min-width: max-content;
     }
 
@@ -64,76 +98,23 @@
     }
   }
 
-  &__active {
-    margin: 1px 0;
-    color: $color_white;
-    background: $color_violet_linear_gradient;
-
-    .sidebar__linkContent__icon,
-    .sidebar__linkContent__title {
-      color: $color_white;
-    }
-  }
-
-  @include breakpoint(tablet) {
-    @include flex_align_around;
-
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 99;
-    height: 60px;
-    max-width: 100%;
-    padding: 0 10px;
-    box-shadow: 0 -5px 10px $color_gray_50;
-
-    &__logo,
-    &__sectionTitle {
-      display: none;
-    }
-
-    &__nav {
+  &__nav {
+    @include breakpoint(tablet) {
       gap: 4px;
       width: 100%;
       height: 100%;
       display: flex;
       overflow-x: auto;
-      scroll-behavior: smooth;
-      -webkit-overflow-scrolling: touch;
-
-      &::-webkit-scrollbar {
-        display: none;
-      }
-
-      scrollbar-width: none;
-      -ms-overflow-style: none;
+      @include scroll-hidden-x;
     }
-
-    &__link,
-    &__active {
-      @include flex_center;
-
-      padding: 8px 0;
-      font-size: 12px;
-      border-radius: 12px;
-      flex-direction: column;
-    }
-
-    &__sectionLinks {
-      @include flex_align;
-
-      flex: 1;
-      height: 100%;
-    }
-  }
-
-  @include breakpoint(mobile-l) {
-    padding: 0 4px;
   }
 
   &__logo {
     margin-bottom: 32px;
+
+    @include breakpoint(tablet) {
+      display: none;
+    }
   }
 
   &__sectionTitleWrap {
@@ -147,10 +128,21 @@
     font-size: 16px;
     font-weight: 700;
     color: $color_gray_800;
+
+    @include breakpoint(tablet) {
+      display: none;
+    }
   }
 
   &__sectionLinks {
     height: 100%;
     overflow-x: auto;
+
+    @include breakpoint(tablet) {
+      @include flex_align;
+
+      flex: 1;
+      height: 100%;
+    }
   }
 }
