--- a/src/styles/fonts/Montserrat/index.scss
+++ b/src/styles/fonts/Montserrat/index.scss
@@ -1,9 +1,23 @@
 $font_resources_path: '/src/styles/fonts/Montserrat';
 
+%font-montserrat-medium {
+  font-family: 'Montserrat-Medium', sans-serif;
+  font-weight: 500;
+}
+
+%font-montserrat-semibold {
+  font-family: 'Montserrat-SemiBold', sans-serif;
+  font-weight: 600;
+}
+
+%font-montserrat-bold {
+  font-family: 'Montserrat-Bold', sans-serif;
+  font-weight: 700;
+}
+
 @font-face {
   font-family: 'Montserrat-Medium';
   font-style: normal;
-  font-weight: 500;
   src: url('#{$font_resources_path}/Montserrat-Medium.ttf') format('truetype');
   font-display: swap;
 }
@@ -11,7 +25,6 @@ $font_resources_path: '/src/styles/fonts/Montserrat';
 @font-face {
   font-family: 'Montserrat-SemiBold';
   font-style: normal;
-  font-weight: 600;
   src: url('#{$font_resources_path}/Montserrat-SemiBold.ttf') format('truetype');
   font-display: swap;
 }
@@ -19,7 +32,6 @@ $font_resources_path: '/src/styles/fonts/Montserrat';
 @font-face {
   font-family: 'Montserrat-Bold';
   font-style: normal;
-  font-weight: 700;
   src: url('#{$font_resources_path}/Montserrat-Bold.ttf') format('truetype');
   font-display: swap;
 }
