--- a/src/components/SideBar/SideBar.module.scss
+++ b/src/components/SideBar/SideBar.module.scss
@@ -1,18 +1,23 @@
 .sidebar {
+  position: sticky; //TODO check later browser lag on scroll to top
+  top: 0;
   width: 100%;
   height: 100vh;
-  padding: 24px;
-  max-width: 270px;
-  box-shadow: -5px -30px 25px $color_gray_100;
+  width: 270px;
+  padding: 32px 24px;
+  background-color: $color_white;
+  box-shadow: -5px -30px 25px $color_gray_150;
 
   @include breakpoint(tablet) {
     @include flex_align_around;
 
     position: fixed;
+    top: auto;
     left: 0;
     right: 0;
     bottom: 0;
     z-index: 99;
+    width: 100%;
     height: 60px;
     max-width: 100%;
     padding: 0 10px;
@@ -26,6 +31,7 @@
   &__linkContent {
     @include flex_align;
 
+    gap: 12px;
     min-width: auto;
 
     @include breakpoint(tablet) {
@@ -39,11 +45,10 @@
     }
 
     &__title {
-      padding: 0 10px;
+      @include text-wrap;
+
       text-align: start;
       transition: transform 0.2s ease;
-
-      @include text-wrap;
 
       @include breakpoint(tablet) {
         text-align: center;
@@ -53,20 +58,21 @@
   }
 
   &__link {
+    @extend %font-montserrat-medium;
     @include flex_align;
 
-    font-family: 'Montserrat-Medium';
     width: 100%;
     padding: 16px;
     cursor: pointer;
-    font-weight: 500;
+    min-height: 54px;
     border-radius: 12px;
     text-decoration: none;
     color: $color_gray_400;
     transition: all 0.3s ease;
 
     &--active {
-      margin: 1px 0;
+      @extend %font-montserrat-semibold;
+
       color: $color_white;
       background: $color_violet_linear_gradient;
 
@@ -77,12 +83,11 @@
     }
 
     @include breakpoint(tablet) {
-      @include flex_center;
+      @include flex_column_align_center;
 
       padding: 0;
       font-size: 12px;
       border-radius: 12px;
-      flex-direction: column;
       min-width: max-content;
     }
 
@@ -99,13 +104,21 @@
   }
 
   &__nav {
+    gap: 1px;
+    display: flex;
+    flex-direction: column;
+
     @include breakpoint(tablet) {
+      @include scroll-hidden-x;
+
       gap: 4px;
       width: 100%;
       height: 100%;
       display: flex;
       overflow-x: auto;
-      @include scroll-hidden-x;
+      max-height: 100%;
+      overflow-y: auto;
+      flex-direction: row;
     }
   }
 
@@ -123,10 +136,9 @@
 
   &__sectionTitle {
     @include text-wrap;
+    @extend %font-montserrat-bold;
 
-    font-family: 'Montserrat-Bold';
     font-size: 16px;
-    font-weight: 700;
     color: $color_gray_800;
 
     @include breakpoint(tablet) {
@@ -135,7 +147,6 @@
   }
 
   &__sectionLinks {
-    height: 100%;
     overflow-x: auto;
 
     @include breakpoint(tablet) {
