--- a/src/containers/Page1/Page1.module.scss
+++ b/src/containers/Page1/Page1.module.scss
@@ -1,8 +1,9 @@
-.container {
-  font-family: 'Montserrat-Medium';
+.page1 {
+  @extend %font-montserrat-medium;
+  @include flex_center;
+
   width: 100%;
   height: 100%;
-  @include flex_center;
 
   &__title {
     @include text-wrap;
