--- a/src/pages/NotFound/NotFound.module.scss
+++ b/src/pages/NotFound/NotFound.module.scss
@@ -1,7 +1,7 @@
-.container {
+.not-found {
+  @extend %font-montserrat-medium;
   @include flex_column_align_center;
 
-  font-family: 'Montserrat-Medium';
   width: 100%;
   height: 100%;
 }
