--- a/src/styles/colors/colors.scss
+++ b/src/styles/colors/colors.scss
@@ -1,12 +1,17 @@
 $color_white: #fff;
+
 $color_gray_50: #f2f2f2;
 $color_gray_100: #e6e6e6;
+$color_gray_150: #d7d7d7;
 $color_gray_200: #c4c4c4;
 $color_gray_400: #999999;
 $color_gray_600: #6b6b6b;
 $color_gray_800: #3c3e43;
+
 $color_dark: #121212;
+$color_dark_opacity50: #12121280;
+$color_dark_opacity10: #12121210;
 
 $color_violet: #7c74ee;
-$color_violet_opacity: #7c74ee1a;
+$color_violet_opacity10: #7c74ee1a;
 $color_violet_linear_gradient: linear-gradient(to right, #3dc3c0, #8568f5);
