--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,5 @@
-@forward './breakpoints';
 @forward './colors';
+@forward './fonts/';
 @forward './mixins';
+@forward './variables/';
+@forward './breakpoints';
