--- a/src/components/shared/SectionHeader/SectionHeader.module.scss
+++ b/src/components/shared/SectionHeader/SectionHeader.module.scss
@@ -3,10 +3,8 @@
 
   width: 100%;
   margin-bottom: 24px;
-  padding-right: 26px;
 
   @include breakpoint(tablet) {
-    padding: 0;
     margin-bottom: 20px;
   }
 
@@ -33,7 +31,8 @@
   &__button {
     @extend %font-montserrat-semibold;
 
-    padding: 6px;
+    padding: 6px 0;
+    flex-shrink: 0;
     font-size: 14px;
 
     @include breakpoint(tablet) {
