--- a/src/components/shared/SideBar/SideBar.module.scss
+++ b/src/components/shared/SideBar/SideBar.module.scss
@@ -2,8 +2,9 @@
   position: sticky; //TODO check later browser lag on scroll to top
   top: 0;
   width: 100%;
-  height: 100vh;
   width: 270px;
+  height: 100vh;
+  overflow-y: auto;
   padding: 32px 24px;
   background-color: $color_white;
   box-shadow: -5px -30px 25px $color_gray_150;
