--- a/src/pages/HomeScreen/RecommendedTracks/RecommendedTracks.module.scss
+++ b/src/pages/HomeScreen/RecommendedTracks/RecommendedTracks.module.scss
@@ -1,14 +1,6 @@
 .recommended-tracks {
   width: 100%;
-  padding: 32px;
-
-  @include breakpoint(tablet) {
-    padding: 24px;
-  }
-
-  @include breakpoint(mobile-l) {
-    padding: 14px;
-  }
+  padding-bottom: 24px;
 
   &__trackList {
     @include scroll-hidden-x;
@@ -16,7 +8,6 @@
     gap: 30px;
     width: 100%;
     display: flex;
-    overflow-x: hidden;
     align-items: stretch;
 
     @include breakpoint(tablet) {
