--- a/src/components/shared/SectionHeader/SectionHeader.module.scss
+++ b/src/components/shared/SectionHeader/SectionHeader.module.scss
@@ -31,9 +31,9 @@
   &__button {
     @extend %font-montserrat-semibold;
 
-    padding: 6px 0;
     flex-shrink: 0;
     font-size: 14px;
+    padding: 6px 10px;
 
     @include breakpoint(tablet) {
       font-size: 12px;
