--- a/src/pages/HomeScreen/MusicPlayer/MusicPlayer.module.scss
+++ b/src/pages/HomeScreen/MusicPlayer/MusicPlayer.module.scss
@@ -1,9 +1,18 @@
 .music-player {
   right: 0;
   bottom: 0;
-  width: 100%;
   position: fixed;
   padding: 20px 30px;
-  left: #{$sidebar-width};
   background-color: $color_white;
+  width: calc(100vw - #{$sidebar-width});
+
+  @include breakpoint(tablet) {
+    width: 100%;
+    padding: 16px 22px;
+    bottom: calc(#{$sidebar-height}); // TODO will check later
+  }
+
+  @include breakpoint(mobile-l) {
+    padding: 12px 16px;
+  }
 }
