BNWA-25 Design and Implement Pixel-Perfect Custom Audio Controls UI

--- a/src/components/shared/SectionHeader/SectionHeader.module.scss
+++ b/src/components/shared/SectionHeader/SectionHeader.module.scss
@@ -43,6 +43,7 @@
 
   &__button:hover {
     border-radius: 6px;
+    transition: background-color 0.3s ease;
     background-color: $color_violet_opacity10;
   }
 }
