--- a/src/components/views/TrackCard/TrackCard.module.scss
+++ b/src/components/views/TrackCard/TrackCard.module.scss
@@ -46,7 +46,7 @@
   }
 
   &__image {
-    width: 100%;
+    width: 170px;
     height: 170px;
     display: block;
     cursor: pointer;
@@ -54,10 +54,12 @@
     border-radius: 12px;
 
     @include breakpoint(tablet) {
+      width: 130px;
       height: 130px;
     }
 
     @include breakpoint(mobile-l) {
+      width: 100px;
       height: 100px;
     }
   }
@@ -70,5 +72,16 @@
     bottom: 10px;
     cursor: pointer;
     border-radius: 50%;
+  }
+
+  &__info {
+    max-width: 170px;
+
+    @include breakpoint(tablet) {
+      max-width: 130px;
+    }
+    @include breakpoint(mobile-l) {
+      max-width: 100px;
+    }
   }
 }
