--- a/src/styles/variables/variables.scss
+++ b/src/styles/variables/variables.scss
@@ -31,3 +31,28 @@ $sidebar-width: 270px;
   flex: 1;
   min-width: 0;
 }
+
+// audio
+@mixin hide-range-thumb {
+  &::-webkit-slider-thumb {
+    opacity: 0;
+    appearance: none;
+    pointer-events: none;
+    -webkit-appearance: none;
+  }
+
+  &::-webkit-slider-runnable-track {
+    height: 6px;
+    background: transparent;
+  }
+
+  &::-moz-range-thumb {
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  &::-moz-range-track {
+    height: 6px;
+    background: transparent;
+  }
+}
